@@ -1,5 +1,11 @@
 2011-06-17  Miloslav Trmač  <mitr@redhat.com>
 
+	* src/bridge.py (BridgeConnection.forward_reply_headers): New
+	function, split from handle_connection.
+	(BridgeConnection.read_reply_payload_size)
+	(BridgeConnection.forward_reply_payload_authenticator): Fold into
+	forward_reply_headers.
+
 	* src/bridge.py (bridge_one_request): Close server socket even if
 	client has failed to connect.
 
